--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 						<div class="col-md-10">
 							<h4>{{user.name}}</h4>
 							<p>{{text}}</p>
+							<p>{{friendlyDate}}</p>
 						</div>
 					</div>
 				</li>
@@ -42,6 +43,7 @@
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/backbone.js/1.3.3/backbone-min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.5/handlebars.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.6/js/bootstrap.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.13.0/moment.min.js"></script>
 
 		<!-- Models -->
 		<script src="models/tweet.js"></script>
