feat: added a profile view.

--- a/index.html
+++ b/index.html
@@ -65,12 +65,14 @@
 
 		<!-- Models -->
 		<script src="models/tweet.js"></script>
+		<script src="models/profile.js"></script>
 
 		<!-- Collections -->
 		<script src="collections/timeline.js"></script>
 		
 		<!-- View -->
 		<script src="views/timelineView.js"></script>
+		<script src="views/profileView.js"></script>
 		
 		<!-- Router -->
 		<script src="routers/appRouter.js"></script>
