featL instantiat ProfileView in app.js

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 			</ul>
 		</script>
 
-		<script type="template/x-handlebars-template">
+		<script type="template/x-handlebars-template" id="profile-template">
 			<div class="col-md-2">
 				<img src="{{user.profile_image_url}}" alt="" />
 			</div>
