--- a/index.html
+++ b/index.html
@@ -17,6 +17,16 @@
 			<div class="row">
 				<div id="timeline" class="col-md-6"></div>
 				<div id="profile-view" class="col-md-4 pull-right"></div>
+				<div class="col-md-4 pull-right" id="search">
+					<form action="#" class="form">
+						<div class="form-group">
+							<input type="text" class="form-control" id="searchbox" placeholder="Enter your search term...">
+						</div>
+						<div class="form-group">
+							<button class="btn btn-primary" id="searchbutton">Search</button>
+						</div>
+					</form>
+				</div>
 			</div>
 		</div>
 
