chore: updated index.html to include all the necessacry model and views scripts.

--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
 		<!-- Models -->
 		<script src="models/tweet.js"></script>
 		<script src="models/profile.js"></script>
+		<script src="models/search.js"></script>
 
 		<!-- Collections -->
 		<script src="collections/timeline.js"></script>
@@ -83,6 +84,8 @@
 		<!-- View -->
 		<script src="views/timelineView.js"></script>
 		<script src="views/profileView.js"></script>
+		<script src="views/searchView.js"></script>
+		<script src="views/resultsView.js"></script>
 		
 		<!-- Router -->
 		<script src="routers/appRouter.js"></script>
