fix: fixed typos.

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 							<input type="text" class="form-control" id="searchbox" placeholder="Enter your search term...">
 						</div>
 						<div class="form-group">
-							<button class="btn btn-primary" id="searchButton">Search</button>
+							<button class="btn btn-primary" id="searchbutton">Search</button>
 						</div>
 					</form>
 				</div>
